# cyrobot

./: base_install.sh
chusei_stereo_camera_ros/: package.xml
chusei_stereo_camera_ros/launch/: stereo.launch
chusei_stereo_camera_ros/scripts/: stereo.py
cyrobot/: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
cyrobot/arduino/firmware/lib/imu/: Imu.h
cyrobot/arduino/firmware/src/SensorFirmware/: BattProtocol.cpp  BattProtocol.h  SensorFirmware.ino
cyrobot/arduino/firmware/src/firmware/: Kinematics.cpp  Kinematics.h  encoder.h  encoder.ino  (+4 more)
cyrobot/include/: lino_base.h
cyrobot/launch/: bringup.launch  description.launch  display.launch  minimal.launch  model.launch  navigate.launch  slam.launch
cyrobot/launch/include/: laser.launch
cyrobot/launch/include/imu/: imu.launch
cyrobot/launch/include/move_base/: move_base_2wd.launch  move_base_ackermann.launch  move_base_mecanum.launch
cyrobot/maps/: keting(复件).pgm  keting.yaml  mymap.pgm  mymap.yaml  new_home.pgm  new_home.yaml
cyrobot/param/navigation/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml
cyrobot/rviz/: odometry.rviz
cyrobot/src/: lino_base.cpp  lino_base_node.cpp
cyrobot/urdf/: base.urdf  linorobot.urdf
cyrobot/urdf/mecanum/: mecanumbot.urdf
cyrobot_description/: CMakeLists.txt  package.xml
cyrobot_description/config/: joint_names_cyrobot_description.yaml
cyrobot_description/launch/: display.launch  gazebo.launch  robotModel.launch
cyrobot_description/meshes/: base_link.STL  laser_Link.STL  left_back_Link.STL  left_head_Link.STL  right_back_Link.STL  right_head_Link.STL
cyrobot_description/urdf/: cyrobot_description.csv  cyrobot_description.urdf
cyrobot_msgs/: CMakeLists.txt  package.xml
cyrobot_pid/: CMakeLists.txt  package.xml
cyrobot_pid/cfg/: cyrobotPID.cfg
cyrobot_pid/include/cyrobot_pid/: cyrobot_pid_core.h
cyrobot_pid/rosinstall/: lino_pid.rosinstall
cyrobot_pid/src/: cyrobot_pid_core.cpp  pid_configure.cpp  pid_listen.cpp
cyrobot_udev/: CMakeLists.txt  README.md  package.xml
cyrobot_udev/scripts/: lino_udev.py
cyrobot_visualize/: CMakeLists.txt  package.xml
ros_astra_camera/: package.xml
ros_astra_camera/launch/: astra.launch
ros_astra_launch/launch/: astra.launch
ydlidar/launch/: lidar.launch
(+3 files in other folders)
