<?xml version="1.0"?>
<package>
  <name>cyrobot_udev</name>
  <version>0.0.1</version>
  <description>udev rule creator for cyrobot</description>

  <maintainer email="jimenojmm@gmail.com">Juan Jimeno</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>