<?xml version="1.0"?>
<package>
  <name>cyrobot_visualize</name>
  <version>0.0.0</version>
  <description>RVIZ files for cyrobot</description>

  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
